[package]
name = "builder"
version = "0.6.2"
description = "signet builder example"

edition = "2024"
rust-version = "1.88"
authors = ["init4"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/init4tech/builder"
repository = "https://github.com/init4tech/builder"

[lib]
name = "builder"

[[bin]]
name = "zenith-builder-example"
path = "bin/builder.rs"

[dependencies]
init4-bin-base = { version = "0.18.0-rc.0", features = ["perms", "aws"] }

signet-constants = { version = "0.16.0-rc.0" }
signet-sim = { version = "0.16.0-rc.0" }
signet-tx-cache = { version = "0.16.0-rc.0" }
signet-types = { version = "0.16.0-rc.0" }
signet-zenith = { version = "0.16.0-rc.0" }
signet-block-processor = { git = "https://github.com/init4tech/node-components", tag = "v0.16.0-rc.2" }
signet-genesis = { git = "https://github.com/init4tech/node-components", tag = "v0.16.0-rc.2" }

trevm = { version = "0.31.2", features = ["concurrent-db", "test-utils"] }

alloy = { version = "=1.0.35", features = [
    "full",
    "json-rpc",
    "signer-aws",
    "rpc-types-mev",
    "rpc-client",
    "rpc-types-debug",
    "rlp",
    "node-bindings",
    "serde",
    "getrandom",
    "provider-mev-api",
] }

reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }

axum = "0.7.5"
eyre = "0.6.12"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
url = "2.5.4"

[dev-dependencies]
alloy-hardforks = "0.4.0"
alloy-chains = "0.2"

# comment / uncomment for local dev
# [patch.crates-io]
# signet-constants = { path = "../signet-sdk/crates/constants" }
# signet-types = { path = "../signet-sdk/crates/types" }
# signet-zenith = { path = "../signet-sdk/crates/zenith" }
# signet-sim = { path = "../signet-sdk/crates/sim" }
# signet-evm = { path = "../signet-sdk/crates/evm" }
# signet-extract = { path = "../signet-sdk/crates/extract" }
# signet-journal = { path = "../signet-sdk/crates/journal" }
# signet-tx-cache = { path = "../signet-sdk/crates/tx-cache" }
# signet-bundle = { path = "../signet-sdk/crates/bundle" }
# init4-bin-base = { path = "../bin-base" }
