[package]
name = "builder"
version = "1.0.0-rc.4"
description = "signet builder example"

edition = "2024"
rust-version = "1.88"
authors = ["init4"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/init4tech/builder"
repository = "https://github.com/init4tech/builder"

[lib]
name = "builder"

[[bin]]
name = "zenith-builder-example"
path = "bin/builder.rs"

[dependencies]
init4-bin-base = { version = "0.18.0-rc.10", features = ["perms", "aws", "pylon"] }

signet-constants = { version = "0.16.0-rc.11" }
signet-sim = { version = "0.16.0-rc.11" }
signet-tx-cache = { version = "0.16.0-rc.11" }
signet-types = { version = "0.16.0-rc.11" }
signet-zenith = { version = "0.16.0-rc.11" }
signet-block-processor = { git = "https://github.com/init4tech/node-components", tag = "v0.16.0-rc.8" }
signet-genesis = { git = "https://github.com/init4tech/node-components", tag = "v0.16.0-rc.8" }

trevm = { version = "0.34.0", features = ["concurrent-db", "test-utils", "asyncdb"] }

alloy = { version = "1.4.0", features = [
    "full",
    "json-rpc",
    "signer-aws",
    "rpc-types-mev",
    "rpc-client",
    "rpc-types-debug",
    "rlp",
    "node-bindings",
    "serde",
    "getrandom",
    "provider-mev-api",
] }

reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }

axum = "0.7.5"
backon = { version = "1.6.0", features = ["tokio-sleep"] }
eyre = "0.6.12"
futures-util = "0.3.31"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
alloy-hardforks = "0.4.0"
alloy-chains = "0.2"

# comment / uncomment for local dev
[patch.crates-io]
signet-constants = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1944/fix-hang" }
signet-types = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1944/fix-hang" }
signet-zenith = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1944/fix-hang" }
signet-sim = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1944/fix-hang" }
signet-evm = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1944/fix-hang" }
signet-extract = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1944/fix-hang" }
signet-journal = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1944/fix-hang" }
signet-tx-cache = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1944/fix-hang" }
signet-bundle = { git = "https://github.com/init4tech/signet-sdk.git", branch = "fraser/eng-1944/fix-hang" }
trevm = { git = "https://github.com/init4tech/trevm.git", branch = "fraser/eng-1944/fix-hang" }
