[package]
name = "builder"
version = "1.0.0-rc.6"
description = "signet builder example"

edition = "2024"
rust-version = "1.88"
authors = ["init4"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/init4tech/builder"
repository = "https://github.com/init4tech/builder"

[features]
test-utils = []

[lib]
name = "builder"

[[bin]]
name = "zenith-builder-example"
path = "bin/builder.rs"

[[test]]
name = "block_builder_test"
required-features = ["test-utils"]

[[test]]
name = "bundle_poller_test"
required-features = ["test-utils"]

[[test]]
name = "cache"
required-features = ["test-utils"]

[[test]]
name = "env"
required-features = ["test-utils"]

[[test]]
name = "tx_poller_test"
required-features = ["test-utils"]

[dependencies]
init4-bin-base = { version = "0.18.0-rc.13", features = ["perms", "aws", "pylon"] }

signet-constants = { version = "0.16.0-rc.16" }
signet-sim = { version = "0.16.0-rc.16" }
signet-tx-cache = { version = "0.16.0-rc.16" }
signet-types = { version = "0.16.0-rc.16" }
signet-zenith = { version = "0.16.0-rc.16" }
signet-block-processor = { git = "https://github.com/init4tech/node-components", tag = "v0.16.0-rc.10" }
signet-genesis = { git = "https://github.com/init4tech/node-components", tag = "v0.16.0-rc.10" }

trevm = { version = "0.34.0", features = ["concurrent-db", "test-utils", "asyncdb"] }

alloy = { version = "1.4.0", features = [
    "full",
    "json-rpc",
    "signer-aws",
    "rpc-types-mev",
    "rpc-client",
    "rpc-types-debug",
    "rlp",
    "node-bindings",
    "serde",
    "getrandom",
    "provider-mev-api",
] }

reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.3" }

axum = "0.7.5"
backon = { version = "1.6.0", features = ["tokio-sleep"] }
eyre = "0.6.12"
futures-util = "0.3.31"
git-version = "0.3.9"
itertools = "0.14.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
thiserror = "2.0.17"
tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
alloy-hardforks = "0.4.0"
alloy-chains = "0.2"
criterion = { version = "0.8.2", features = ["async_tokio"] }
signet-bundle = "0.16.0-rc.11"

[[bench]]
name = "sim"
path = "benches/sim/main.rs"
harness = false

# comment / uncomment for local dev
# [patch.crates-io]
# signet-constants = { path = "../signet-sdk/crates/constants" }
# signet-types = { path = "../signet-sdk/crates/types" }
# signet-zenith = { path = "../signet-sdk/crates/zenith" }
# signet-sim = { path = "../signet-sdk/crates/sim" }
# signet-evm = { path = "../signet-sdk/crates/evm" }
# signet-extract = { path = "../signet-sdk/crates/extract" }
# signet-journal = { path = "../signet-sdk/crates/journal" }
# signet-tx-cache = { path = "../signet-sdk/crates/tx-cache" }
# signet-bundle = { path = "../signet-sdk/crates/bundle" }
# init4-bin-base = { path = "../bin-base" }
